--- a/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -28,6 +28,11 @@
     <a class="menu-toggle rounded" href="#">
       <i class="fa fa-bars"></i>
     </a>
+    <audio id="random3"></audio>
+    <!--<audio id = "song1" src="music/ChibiNinja.mp3" autoplay>
+<p>If you are reading this, it is because your browser does not support the audio element.     </p>
+<embed src="music/ChibiNinja.mp3" width="180" height="90" hidden="true" />
+</audio>-->
     <!--<nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
@@ -64,11 +69,13 @@
       </div>
       <div class="overlay"></div>
    <div class="container text-center my-auto hidden" id="timerscreen">
-       <div class='fullscreenDiv'>
-    <div class="center"><p class="timer">  <span id="countdowntimer"> </span> </p>
+       <div class="fullscreenDiv">
+    <div class="center"><p class="timer"> <span id="countdowntimer">  </span></p>
+
 </div>
 </div>​
 </div>
+    
     </header>
 
     <!-- Section -->
